gcc/testsuite/gcc.dg/spellcheck-options-21.c
/* { dg-do compile } */
/* { dg-require-effective-target lto } */
/* { dg-options "-flto=sparta" } */
/* { dg-error "unrecognized argument to '-flto=' option: 'sparta'" "" { target *-*-* } 0 } */
